@@ -282,7 +282,6 @@ div.pm_search_no_result_info {
 .portletSelected { font-weight: bold; }
 .field {margin: 0 1em 0.5em 0; }
 #portal-column-one .visualPadding { padding: 2em 0 1em 1em; }
-#portal-column-content { padding: 1em 0.5em 0 1em; }
 #portal-languageselector { float:right; margin: 0; font-size: 95%; }
 #portal-footer {margin: 1em 0 0.5em 0; padding: 0; }
 #portal-advanced-search {display: none; }
